test/errors/scope-resolution/fullUsePath.1.good
fullUsePath.chpl:1: warning: an implicit module named 'fullUsePath' is being introduced to contain file-scope code
fullUsePath.chpl:8: In module 'M4':
fullUsePath.chpl:9: error: cannot find module or enum named 'ToLookFor'
fullUsePath.chpl:1: note: a declaration of 'ToLookFor' is here
fullUsePath.chpl:1: note: however, 'use' statements can only be used with modules or enums (and this 'ToLookFor' is not a module or enum)
